syntax = "proto3";
package pkg;

import "google/api/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_sizecache_all) = false;

service PersonStore {
    rpc Create (Person) returns (Person.Id) {}
    rpc Get (Person.Id) returns (Person) {}
    rpc List (Person.Filters) returns (Persons) {}
    rpc Update (Person) returns (Person) {}
    rpc Delete (Person.Id) returns (google.protobuf.Empty) {}
}

message Person {
    string id = 1;
    bool enabled = 2;
    int32 type = 3;
    string name = 4;
    google.protobuf.Timestamp createdAt = 5;
    google.protobuf.Timestamp updatedAt = 6;

    enum Type {
        PENDING = 0;
        ACTIVE = 1;
        EXPIRED = 2;
    }

    message Id {
        // Check for valid ObjectId
        string id = 1 [(validate.rules).string.pattern = "^[a-f\\d]{24}$"];
    }

    message Filters {
        bool enabled = 1;
        int32 type = 2;
        int32 skip = 3;
        int32 limit = 4;
    }
}

message Persons {
    repeated Person items = 1;
}
